Fixed number style spacing in live edit mode
Fixed number style spacing in live edit mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,7 @@
 .is-live-preview .dynamic-toc ul {
     white-space: normal;
 }
+
+.is-live-preview .dynamic-toc ol {
+    white-space: normal;
+}
